--- a/FirstRxJava/app/build.gradle
+++ b/FirstRxJava/app/build.gradle
@@ -3,6 +3,17 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude("META-INF/*.kotlin_module")
+    }
     defaultConfig {
         applicationId "com.example.firstrxjava"
         minSdkVersion 26
@@ -30,6 +41,7 @@ dependencies {
     def rxjava_version = '2.2.7'
     def rxandroid_version = '2.1.1'
     def lifecycle_version = "1.1.1"
+    def rxbinding_version = "3.0.0-alpha2"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -57,4 +69,6 @@ dependencies {
 
     // RxJava Call Adapter
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+
+    implementation "com.jakewharton.rxbinding3:rxbinding:$rxbinding_version"
 }
